--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
             </p>
         </div>
     </main>
-    <div class="benefits">
+    <!-- Renamed div to aside -->
+    <aside class="benefits">
         <!--Benefit was changed in CSS to create one class for multi similar text-->
         <div class="benefit">
             <h3>Lead Generation</h3>
@@ -86,14 +87,15 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
-    <div class="footer">
+    </aside>
+    <!-- Renamed div to footer -->
+    <footer class="footer">
         <!--Chnaged to h4 from h2-->
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
